# finch-old

./: .gitignore  Cargo.toml  flake.nix  shell.nix
src/finch-cli/: Cargo.toml
src/finch-cli/src/: main.rs
src/finch-entities/: Cargo.toml
src/finch-entities/src/: lib.rs  team.rs  user.rs
src/finch-migrations/: Cargo.toml
src/finch-migrations/src/: lib.rs  m20220101_000001_create_team_table.rs
src/finch-server/: Cargo.toml
src/finch-server/src/: api.rs  config.rs  error.rs  lib.rs
static/css/: skeleton.css
templates/: index.tera  layout.tera
templates/api/: list_teams.tera
