[package]
name = "finch_entities"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "finch_entities"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies.sea-orm]
version = "^0.7.0"
features = [
  "macros",
  "debug-print",
  "sqlx-postgres",
  "runtime-tokio-rustls",
]
default-features = false
