[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../finch-entities", package = "finch_entities" }
sea-schema = { version = "^0.7.0", default-features = false, features = [ "migration", "debug-print" ] }
