[package]
name = "finch-server"
version = "0.1.0"
edition = "2021"

[dependencies]
finch_entities = { path = "../finch-entities" }
migration = { path = "../finch-migrations" }
axum = "0.4.8"
color-eyre = "0.6.1"
sea-orm = { version = "0.6.0", features = ["sqlx-postgres", "runtime-tokio-rustls"], default-features = false }
serde = "1.0.136"
serde_derive = "1.0.136"
tera = "1.15.0"
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["fs"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
thiserror = "1.0.30"
